--- a/app/src/main/res/drawable/round3.xml
+++ b/app/src/main/res/drawable/round3.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="10dp"/>
-    <stroke android:color="@color/primary_color_blue"
+    <stroke android:color="@color/black"
         android:width="1dp"/>
     <solid
-        android:color="@color/primary_color_blue"/>
+        android:color="#3D5AFE"/>
 </shape>
