--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,46 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    android:layout_centerInParent="true"
     android:orientation="vertical"
-    android:layout_centerInParent="true">
-
+    tools:context=".MainActivity">
 
     <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/appname"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:text="DashBoard"
-                android:textColor="@color/black"
-                android:textSize="40sp"
-                android:textStyle="bold"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="6dp"/>
-
-        <Button
+        <TextView
+            android:id="@+id/appname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/buttonSignOut"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="105dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginTop="12dp"
-            android:layout_toRightOf="@id/appname"
-            android:text="Logout"
-            android:textAllCaps="false"
+            android:layout_marginStart="10dp"
+            android:text="DashBoard"
             android:textColor="@color/black"
-            android:background="@drawable/rounded_bg"
-            android:textSize="18sp"
-            android:textStyle="bold"/>
+            android:textSize="40sp"
+            android:textStyle="bold" />
 
-        </RelativeLayout>
+        <ImageView
+            android:id="@+id/buttonSignOut"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:padding="10dp"
+            android:src="@drawable/logout" />
+
+    </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -48,43 +39,72 @@
         android:layout_margin="10dp">
 
         <TextView
+            android:id="@+id/text1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add a new car:"
-            android:textSize="22sp"
+            android:text="Add New Car:"
             android:textColor="@color/black"
-            android:textStyle="bold"
-            android:id="@+id/text1"/>
+            android:textSize="22sp"
+            android:textStyle="bold" />
 
-        <Spinner
-            android:id="@+id/spinner1"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_below="@+id/text1"
-            android:layout_marginTop="6dp"/>
-
-        <Spinner
-            android:id="@+id/spinner2"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_below="@+id/spinner1"
-            android:layout_marginTop="6dp"/>
-
-        <Button
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/spinner2"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="6dp"
-            android:layout_marginEnd="0dp"
-            android:background="@drawable/round2"
-            android:text="Add Car"
-            android:textAllCaps="false"
-            android:textSize="18sp"
-            android:textStyle="bold"/>
+            android:layout_marginTop="10dp"
+            app:cardCornerRadius="8dp"
+            android:layout_below="@id/text1">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="20dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Select Vehicle Name"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+                <Spinner
+                    android:id="@+id/spinner1"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:layout_marginTop="6dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="Select Vehicle Model"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+                <Spinner
+                    android:id="@+id/spinner2"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:layout_marginTop="6dp" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/round2"
+                    android:text="Add Vehicle"
+                    android:textAllCaps="false"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    app:backgroundTint="@color/black" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
     </RelativeLayout>
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
