--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="6dp"
+    android:layout_margin="10dp"
+    app:cardBackgroundColor="@color/spinner"
     app:cardCornerRadius="10dp"
     app:cardElevation="10dp"
-    android:id="@+id/cardView"
-    tools:ignore="HardcodedText"
-    app:cardBackgroundColor="@color/spinner">
+    tools:ignore="HardcodedText">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,59 +21,63 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ImageView
-                android:layout_width="125dp"
-                android:layout_height="140dp"
-                android:scaleType="centerCrop"
-                android:layout_margin="8dp"
+            <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/carImage"
-                android:src="@drawable/ic_launcher_background"/>
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_margin="8dp"
+                app:shapeAppearance="@style/ImageShape"
+                app:srcCompat="@drawable/ic_launcher_background" />
+
+            <TextView
+                android:id="@+id/textCarMake"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="25dp"
                 android:layout_toRightOf="@+id/carImage"
                 android:text="Car Make"
-                android:id="@+id/textCarMake"
                 android:textColor="@color/black"
-                android:textSize="18sp"
-                android:layout_marginTop="25dp"
-                android:layout_marginStart="8dp"/>
+                android:textSize="18sp" />
+
             <TextView
+                android:id="@+id/textCarModel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/carImage"
                 android:layout_below="@+id/textCarMake"
-                android:text="Car Model"
-                android:id="@+id/textCarModel"
-                android:textColor="@color/black"
-                android:textSize="18sp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginStart="8dp"/>
+                android:layout_toRightOf="@+id/carImage"
+                android:text="Car Model"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/buttonAddCar"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textCarModel"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="20dp"
+                android:layout_toRightOf="@+id/carImage"
+                android:background="@drawable/round3"
+                android:padding="4dp"
+                android:text="Add Image"
+                android:textAllCaps="false"
+                app:backgroundTint="#3D5AFE" />
 
             <Button
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/buttonAddCar"
-                android:layout_toRightOf="@+id/carImage"
                 android:layout_below="@+id/textCarModel"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="20dp"
-                android:background="@drawable/round3"
-                android:elevation="10dp"
-                android:text="Add car Image"
-                android:textAllCaps="false"
-                android:padding="4dp"/>
-            <Button
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
                 android:layout_toRightOf="@+id/buttonAddCar"
-                android:layout_below="@+id/textCarModel"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="20dp"
                 android:background="@drawable/rounded_bg"
-                android:text="Delete Car"
-                android:textAllCaps="false"
-                android:padding="4dp"/>
+                android:padding="4dp"
+                android:text="Delete"
+                android:textAllCaps="false" />
 
 
         </RelativeLayout>
